gui.css: Fix initial position of aligned panel.
This works together with the value of view.align_bar in gui.js
(which is 75 by default).

--- a/ete4/smartview/static/gui.css
+++ b/ete4/smartview/static/gui.css
@@ -79,7 +79,7 @@
     display: none;
     position: absolute;
     right: 0px;
-    width: 30%;
+    width: 25%;
     height: 100%;
     touch-action: none;
 }
